Fix double scrollbars in dir preview (#932)
Phew this took a while, but I think it's a good compromise. All the
scrolling for a preview view now must happen inside the individual
views, rather than at the root level. Now, the scrollbars render in the
right places and are always visible inside the block. I don't love the
blurred header for the table, but it was make it blurry or make it even
more opaque, which would ruin the transparency

--- a/frontend/app/view/preview/directorypreview.less
+++ b/frontend/app/view/preview/directorypreview.less
@@ -7,18 +7,28 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    --min-row-width: 35rem;
     .dir-table {
         height: 100%;
-        min-width: 600px;
+        width: 100%;
         --col-size-size: 0.2rem;
-        border-radius: 3px;
         display: flex;
         flex-direction: column;
-        font: var(--base-font);
+
+        &:not([data-scroll-height="0"]) .dir-table-head {
+            background: rgba(10, 10, 10, 0.5);
+            backdrop-filter: blur(4px);
+        }
         .dir-table-head {
+            position: sticky;
+            top: 0;
+            z-index: 10;
+            width: fit-content;
+            border-bottom: 1px solid var(--border-color);
+
             .dir-table-head-row {
                 display: flex;
-                border-bottom: 1px solid var(--border-color);
+                min-width: var(--min-row-width);
                 padding: 4px 6px;
                 font-size: 0.75rem;
 
@@ -68,10 +78,8 @@
         }
 
         .dir-table-body {
-            flex: 1 1 auto;
             display: flex;
             flex-direction: column;
-            overflow: hidden;
             .dir-table-body-search-display {
                 display: flex;
                 border-radius: 3px;
@@ -94,6 +102,7 @@
                     align-items: center;
                     border-radius: 5px;
                     padding: 0 6px;
+                    min-width: var(--min-row-width);
 
                     &.focused {
                         background-color: rgb(from var(--accent-color) r g b / 0.5);
